Cleaned up websocket-client

--- a/services/websocket-server/CMakeLists.txt
+++ b/services/websocket-server/CMakeLists.txt
@@ -7,8 +7,9 @@ target_link_libraries(trawler-services-websocket-server
   PUBLIC
     trawler-services-base
     trawler-services-util
-    trawler-services-websocket-common
     rxcpp
+  PRIVATE
+    trawler-services-websocket-common    
 #    OpenSSL::SSL
 )
 
