--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(trawler-cli
     trawler-services-websocket-client
     trawler-services-websocket-server
     trawler-pipelines-endpoint
+    trawler-pipelines-inja
     trawler-logging
   PUBLIC
     Boost::program_options
