Added service scaffolding

--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(base)
 add_subdirectory(websocket-server)
 add_subdirectory(websocket-client)
 add_subdirectory(websocket-common)
+add_subdirectory(http-server)
