Refactoring stuff before adding http server

--- a/services/base/CMakeLists.txt
+++ b/services/base/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_library(trawler-services-base
-  INTERFACE
-)
+add_library(trawler-services-base INTERFACE)
 
 target_link_libraries(trawler-services-base
   INTERFACE
