Moved make-tcp-acceptor into its own file

--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(websocket-server)
 add_subdirectory(websocket-client)
 add_subdirectory(websocket-common)
 add_subdirectory(tcp-common)
+add_subdirectory(http-server)
