Changed payload to variant. Closes #3.

--- a/services/websocket-server/CMakeLists.txt
+++ b/services/websocket-server/CMakeLists.txt
@@ -21,4 +21,6 @@ target_include_directories(trawler-services-websocket-server
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
+set_target_properties(trawler-services-websocket-server PROPERTIES CXX_STANDARD 17)
+
 trawler_add_sanitizers(trawler-services-websocket-server)
