:sparkles: Working event filtering to pipelines
Event filtering for pipelines. The user can give a sequence of one or more events to react to, or a single event as a string.

--- a/examples/bitcoin.yaml
+++ b/examples/bitcoin.yaml
@@ -18,7 +18,7 @@ pipelines:
   - name: reply-message
     pipeline: emit
     source: bitcoin-client
-    event: connected
+    event: [ "connected" ]
     data: |
       { "event": "subscribe", "channel": "ticker", "pair": "BTCUSD" }
 
