:art: Endpoints are specified as a list of names
Endpoints are specified as a list of names rather than complicated maps. Simplifies configuration and code.

--- a/examples/bitcoin.yaml
+++ b/examples/bitcoin.yaml
@@ -79,10 +79,6 @@ pipelines:
       </table>
 
 endpoints:
-  - name: subscribe
-    source: reply-message
-    event: connected
-
-  - name: terminate
-    source: inja-pipeline
-    event: data
+  - reply-message
+  - inja-pipeline
+...
