:sparkles: Http request method filter for example
Adding http request method filter for the verb GET. Next one might want to have the webserver respond with some error code for POST requests.

--- a/examples/bitcoin.yaml
+++ b/examples/bitcoin.yaml
@@ -41,10 +41,16 @@ pipelines:
         low:               .[9]
       }
 
+  - name: request-filter
+    pipeline: jq
+    source: http-server
+    script: |
+      . | select(. | contains({"method": "GET"}))
+
   - name: value-buffer
     pipeline: buffer
     source: jq-pipeline
-    trigger_source: http-server
+    trigger_source: request-filter
 
   # Render the bitcoin data into a nice webpage using the inja template engine.
   - name: inja-pipeline
