:sparkles: Adding http client pipeline
Adding a basic http client pipeline without any tweaks or :bell: and :kissing:. Also a basic example.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(trawler-cli
     trawler-pipelines-jq
     trawler-pipelines-buffer
     trawler-pipelines-emit
+    trawler-pipelines-http-client
     trawler-logging
   PUBLIC
     Boost::program_options
