:recycle: Move the root certificates to services/tcp-common
Move the root certificates to services/tcp-common in order for other components to access them.

--- a/services/websocket-client/CMakeLists.txt
+++ b/services/websocket-client/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(trawler-services-websocket-client
     OpenSSL::SSL
   PRIVATE
     trawler-services-websocket-common
+    trawler-services-tcp-common
 )
 
 target_include_directories(trawler-services-websocket-client
