:sparkles: Add http client with SSL compatibility
Add a separate create_http_client_ssl_pipeline function, whom implements SSL. A new field on the http_client_pipeline_t configuration is added to support this.

--- a/pipelines/http-client/CMakeLists.txt
+++ b/pipelines/http-client/CMakeLists.txt
@@ -1,11 +1,13 @@
 add_library(trawler-pipelines-http-client
   STATIC
     src/http-client.cpp
+    src/http-client-ssl.cpp
 )
 
 target_link_libraries(trawler-pipelines-http-client
   PUBLIC
     trawler-services-base
+    trawler-services-tcp-common
     trawler-logging
     rxcpp
 )
